testsuite/bsc.typechecker/kind/StructDefResGivenNum.bs.bsc-out.expected
checking package dependencies
compiling StructDefResGivenNum.bs
Error: "StructDefResGivenNum.bs", line 3, column 8: (T0021)
  Kind error at:
    Foo

  Expected kind:
    #

  Inferred kind:
    *

