testsuite/bsc.typechecker/kind/StructDefResGivenNum.bs
package StructDefResGivenNum () where

struct (Foo :: #) =
    x :: Bool

